fix: Correção de Ortografia

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>container
 <html lang="pt-br">
   <head>
     <title>Título</title>
@@ -18,7 +18,7 @@
     <header>
         <div class="menu">
             <div class="left-side-menu">
-                <div class="conteiner">
+                <div class="container">
                     <div class="item-menu" id="logo"> 
                         <img src="img/logo-mercado-drible.jpeg" width="100px" height="100px">
                     </div>
@@ -49,7 +49,7 @@
                
     </header>         
     <body>
-      <div class="conteiner1"> 
+      <div class="container1"> 
        <div class="filtros">
         <div class="item-menu" ></div>       
         <input type="text" id="txtBusca" placeholder="Tipo"/>
